[gd_scene load_steps=3 format=2]

[ext_resource path="res://Maps/PowerUps/PowerupSpawner.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 5, 5 )

[node name="PowerupSpawner" type="Spatial"]
script = ExtResource( 1 )

[node name="SpawnArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="SpawnArea"]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -100, 0 )

[connection signal="area_exited" from="SpawnArea" to="." method="_on_SpawnArea_area_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
